# safe-mpi

./: .gitignore  Cargo.toml  README.md  mpirun  poster.mplstyle  results-2023-04-03-2-nodes-bw.json  results-2023-04-03.json  results-2023-04-04-bw.json
benchmark-configs/: bw-complex-compound.yaml  bw-complex-noncompound-16m.yaml  bw-complex-noncompound-2023-08-30.yaml  bw-simple.yaml  bw-ucx-opts-2k-256k.yaml  bw-ucx-opts.yaml  bw-ucx-opts.yml  default.yaml  latency-complex.yaml  latency-simple.yaml
benchmarks/: Cargo.toml
benchmarks/src/: bw.rs  latency.rs  lib.rs
benchmarks/src/data_controllers/: bincode.rs  flat.rs  iovec.rs  messagepack.rs  mod.rs  postcard.rs  serde.rs
datatypes/: Cargo.toml
flat/: Cargo.toml
flat-derive/: Cargo.toml
inputs/: complex-compound.yaml  complex-noncompound.yaml  simple.yaml
iovec/: Cargo.toml
mpirs/: Cargo.toml  mpirs.rs  test.sh
mpirs/src/: .context.rs.swp  .datatype.rs.swp  .lib.rs.swp  communicator.rs  context.rs  datatype.rs  exchange.rs  lib.rs  main.rs  request.rs  util.rs
msgpk-test/: Cargo.toml
multirank/: Cargo.toml  example.yaml
pmix-sys/: Cargo.toml  build.rs
results/: 2023-03-30-1.json  (+163 more)
results-2023-03-21/: complex-compound_bincode_0_client.sh  complex-compound_bincode_0_server.out  complex-compound_bincode_0_server.sh  complex-compound_bincode_1_client.sh  complex-compound_bincode_1_server.out  complex-compound_bincode_1_server.sh  complex-compound_bincode_2_client.sh  complex-compound_bincode_2_server.out  complex-compound_bincode_2_server.sh  complex-compound_bincode_3_client.sh  complex-compound_bincode_3_server.out  complex-compound_bincode_3_server.sh  complex-compound_iovec_0_client.sh  complex-compound_iovec_0_server.out  (+130 more)
safe-mpi/: Cargo.toml
safe-mpi/src/: callbacks.rs  communicator.rs  context.rs  lib.rs  provider.rs  request.rs  stream.rs  util.rs
safe-mpi/src/data_controllers/: bincode.rs  messagepack.rs  mod.rs  postcard.rs
smpi/: Cargo.toml
smpi-benchmarks/: Cargo.toml
smpi-benchmarks/src/: bw.rs  latency.rs  lib.rs
smpi-benchmarks/src/data_controllers/: bincode.rs  flat.rs  iovec.rs  mod.rs  postcard.rs
smpi/src/: communicator.rs  lib.rs  main.rs  p2p.rs
(+274 files in other folders)
