[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
safe-mpi = { path = "../safe-mpi" }
datatypes = { path = "../datatypes" }
iovec = { path = "../iovec" }
serde = { version = "1.0.152", features = ["derive"] }
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
clap = { version = "4.1.4", features = ["derive"] }
bincode = "1.3.3"
rmp-serde = "1.1.1"
postcard = { version = "1.0.4", features = ["alloc"] }
mpi = "0.6.0"
serde_yaml = "0.9"
