[package]
name = "mpirs"
version = "0.1.0"
edition = "2021"

[dependencies]
ucx2-sys = { path = "../ucx2-sys" }
nix = "0.26.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
log = "0.4.17"
env_logger = "0.10.0"
# For the benchmarks
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
