[package]
name = "safe-mpi"
version = "0.1.0"
edition = "2021"

[dependencies]
ucx2-sys = { path = "../ucx2-sys" }
nix = "0.26.2"
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
log = "0.4.17"
env_logger = "0.10.0"
bincode = "1.3.3"
rmp-serde = "1.1.1"
postcard = { version = "1.0.4", features = ["alloc"] }
# For the benchmarks
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
