[package]
name = "smpi-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
smpi = { path = "../smpi" }
serde = { version = "1.0.152", features = ["derive"] }
clap = { version = "4.1.4", features = ["derive"] }
bincode = "1.3.3"
rmp-serde = "1.1.1"
postcard = { version = "1.0.4", features = ["alloc"] }
mpi = "0.6.0"
serde_yaml = "0.9"
