[package]
name = "smpi"
version = "0.1.0"
edition = "2021"

[dependencies]
smpi-base = { path = "../smpi-base" }
smpi-runtime = { path = "../smpi-runtime" }
smpi-p2p-node = { path = "../smpi-p2p-node" }
futures = { version = "0.3.30", features = ["executor"] }
tokio = { version = "1.36", features = ["rt-multi-thread"] }
